<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arrays</name>
  <version>0.0.0</version>
  <description>A base library for array programming in ROS2</description>
  <author email="tom@boxrobotics.ai">tpanzarella</author>
  <maintainer email="tom@boxrobotics.ai">Tom Panzarella</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>hdf5</depend>
  <depend>libhdf5-dev</depend>
  <depend>spdlog_vendor</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
