<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>h5_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 H5 serialization for humans</description>
  <author email="tom@boxrobotics.ai">tpanzarella</author>
  <maintainer email="tom@boxrobotics.ai">Tom Panzarella</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>hdf5</depend>
  <depend>libhdf5-dev</depend>
  <depend>yaml-cpp</depend>
  <depend>spdlog_vendor</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
