<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>h5b_sensor_msgs</name>
  <version>0.1.0</version>
  <description>HDF5 interface for sensor_msgs</description>
  <author email="tom@boxrobotics.ai">tpanzarella</author>
  <maintainer email="tom@boxrobotics.ai">Tom Panzarella</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament</buildtool_depend>

  <depend>h5_bridge</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>libpcl-all-dev</test_depend>
  <test_depend>pcl_conversions</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
